--- a/nyan-server/public/templates/index.html
+++ b/nyan-server/public/templates/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <nav>
-        <a href="/api/projects">projects</a>
+        <a href="/api/projectslist">projects</a>
         <a href="/api/projectform">create</a>
         {{#if user}}
         <div class="user">
