--- a/nyan-server/public/templates/index.html
+++ b/nyan-server/public/templates/index.html
@@ -5,23 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        html,
-        body {
-            margin: 0;
-            min-height: 100vh;
-            background-image: radial-gradient(purple, orange);
-        }
+    <link rel="stylesheet" href="./static/css/main.css">
 
-        nav {
-            height: 3rem;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.274);
-        }
-    </style>
 </head>
 
 <body>
