--- a/nyan-server/public/templates/project_form.html
+++ b/nyan-server/public/templates/project_form.html
@@ -5,43 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-        }
+    <link rel="stylesheet" href="./css/main.css">
 
-        html,
-        body {
-            margin: 0;
-            min-height: 100vh;
-            background-image: radial-gradient(purple, orange);
-        }
-
-        nav {
-            height: 3rem;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.274);
-        }
-
-        form {
-            margin: auto;
-            width: 20rem;
-            height: 30rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            background-color: lightgreen;
-            padding: 1rem 2rem;
-        }
-    </style>
 </head>
 
 <body>
     <nav>
-        <a href="/api/projects">projects</a>
+        <a href="/api/projectslist">projects</a>
         <a href="/api/projectform">create</a>
         {{#if user}}
         <div class="user">
