update and displace single project working and added filtering for empty strings

--- a/nyan-server/public/templates/project_form.html
+++ b/nyan-server/public/templates/project_form.html
@@ -23,7 +23,7 @@
         {{/if}}
         <a href="/api/status">status</a>
     </nav>
-    <form action="/api/projects" enctype="multipart/form-data" method="post">
+    <form action="/api/project" enctype="multipart/form-data" method="post">
         <input placeholder="name" type="text" name="title">
         <label for="desc">description</label>
         <textarea id="desc" name="description" cols="30" rows="10"></textarea>
