--- a/nyan-server/public/templates/project_list.html
+++ b/nyan-server/public/templates/project_list.html
@@ -27,13 +27,13 @@
     <main class="container projectsGrid">
         {{#if projects}}
         {{#each projects}}
-        <div class="projectItem card">
+        <a href="/api/project/{{this.id}}" class="projectItem card">
             <img src="/api/static/{{this.images.[0]}}" alt="thumbnail">
             <div class="mx-2 my-1">
                 <strong>{{this.name}}</strong>
                 <p>{{this.priority}}</p>
             </div>
-        </div>
+        </a>
         {{/each}}
         {{else}}
         <div class="nothingFound">nothing found</div>
@@ -43,6 +43,7 @@
     <!-- Popper.js first, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
